fix a layout bug in work list

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -2,8 +2,11 @@
   .contact-form {
     margin-top: 90px;
     .contact-form__title {
-      text-align: center;
-      font-size: 40px;
+      @include title;
+      @include phone {
+        margin-bottom: 50px;
+        font-size: 1.7em;
+      }
       margin-bottom: 100px;
       &:after {
         content: '';
@@ -116,8 +119,11 @@
   .access {
     margin-bottom: 60px;
     .access__title {
-      text-align: center;
-      font-size: 40px;
+      @include title;
+      @include phone {
+        margin-bottom: 50px;
+        font-size: 1.7em;
+      }
       margin-bottom: 100px;
       &:after {
         content: '';
